--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -10,6 +10,15 @@ body {
 }
 
 .app {
-    background-color: #212121;
     display: flex;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
 }
+
+@media screen and (max-width: 768px) {
+    .app {
+        position: relative;
+    }
+}
+
